--- a/public/landing.html
+++ b/public/landing.html
@@ -1,1 +1,151 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Foodhub</title>
+    <style media="screen">
+      td {
+        border: thin red solid;
+      }
+      .main-content {
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <table class="main-content">
+      <!-- navigation  -->
+      <tr>
+        <td colspan="4">
+          Foodhub
+        </td>
+
+        <td colspan="4">
+          Sign in
+        </td>
+
+        <td colspan="4">
+          Cart
+        </td>
+      </tr>
+
+      <!-- banner and address input -->
+      <tr>
+        <td colspan="12">
+          Who delivers in your neighborhood?
+        </td>
+      </tr>
+
+      <!-- How to foodhub -->
+      <tr>
+        <td>
+          <h2>How to Foodhub </h2>
+
+          <p>
+            Ordering from your favorite restaurant is even easier than eating.
+          </p>
+        </td>
+      </tr>
+
+      <!-- where, what, how -->
+      <tr>
+        <td colspan="4">
+
+        </td>
+
+        <td colspan="4">
+
+        </td>
+
+        <td colspan="4">
+
+        </td>
+      </tr>
+
+      <!-- sound bites header-->
+      <tr>
+        <td colspan="12">
+
+        </td>
+      </tr>
+
+      <!-- actual sound bites -->
+      <tr>
+        <td colspan="3">
+
+        </td>
+
+        <td colspan="3">
+
+        </td>
+
+        <td colspan="3">
+
+        </td>
+
+        <td colspan="3">
+
+        </td>
+      </tr>
+
+      <!-- Download apps -->
+      <tr>
+        <td colspan="12">
+
+        </td>
+      </tr>
+
+      <!-- Why order banner -->
+      <tr>
+        <td colspan="12">
+
+        </td>
+      </tr>
+
+      <!-- DIscover, better, food -->
+      <tr>
+        <td colspan="4">
+
+        </td>
+
+        <td colspan="4">
+
+        </td>
+
+        <td colspan="4">
+
+        </td>
+      </tr>
+
+      <!-- About foodhub -->
+      <tr>
+        <td colspan="6">
+
+        </td>
+        <td colspan="6">
+
+        </td>
+      </tr>
+
+      <!-- bottom navigation -->
+      <tr>
+        <td colspan="3">
+
+        </td>
+
+        <td colspan="3">
+
+        </td>
+
+        <td colspan="3">
+
+        </td>
+
+        <td colspan="3">
+
+        </td>
+      </tr>
+
+    </table>
+  </body>
+</html>
