--- a/public/landing.html
+++ b/public/landing.html
@@ -1,456 +1,262 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-<!DOCTYPE html>
 <html>
-<<<<<<< HEAD
-  <head>
-    <meta charset="utf-8">
-    <title>Foodhub</title>
-    <style media="screen">
-      td {
-        border: thin red solid;
-      }
-      .main-content {
-        width: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <table class="main-content">
-      <!-- navigation  -->
-      <tr>
-        <td colspan="4">
-          Foodhub
-        </td>
 
-        <td colspan="4">
-          Sign in
-        </td>
-
-        <td colspan="4">
-          Cart
-        </td>
-      </tr>
-
-      <!-- banner and address input -->
-      <tr>
-        <td colspan="12">
-          Who delivers in your neighborhood?
-        </td>
-      </tr>
-
-      <!-- How to foodhub -->
-      <tr>
-        <td>
-          <h2>How to Foodhub </h2>
-
-          <p>
-            Ordering from your favorite restaurant is even easier than eating.
-          </p>
-        </td>
-      </tr>
-
-      <!-- where, what, how -->
-      <tr>
-        <td colspan="4">
-
-        </td>
-
-        <td colspan="4">
-
-        </td>
-
-        <td colspan="4">
-
-        </td>
-      </tr>
-
-      <!-- sound bites header-->
-      <tr>
-        <td colspan="12">
-
-        </td>
-      </tr>
-
-      <!-- actual sound bites -->
-      <tr>
-        <td colspan="3">
-
-        </td>
-
-        <td colspan="3">
-
-        </td>
-
-        <td colspan="3">
-
-        </td>
-
-        <td colspan="3">
-
-        </td>
-      </tr>
-
-      <!-- Download apps -->
-      <tr>
-        <td colspan="12">
-
-        </td>
-      </tr>
-
-      <!-- Why order banner -->
-      <tr>
-        <td colspan="12">
-
-        </td>
-      </tr>
-
-      <!-- DIscover, better, food -->
-      <tr>
-        <td colspan="4">
-
-        </td>
-
-        <td colspan="4">
-
-        </td>
-
-        <td colspan="4">
-
-        </td>
-      </tr>
-
-      <!-- About foodhub -->
-      <tr>
-        <td colspan="6">
-
-        </td>
-        <td colspan="6">
-
-        </td>
-      </tr>
-
-      <!-- bottom navigation -->
-      <tr>
-        <td colspan="3">
-
-        </td>
-
-        <td colspan="3">
-
-        </td>
-
-        <td colspan="3">
-
-        </td>
-
-        <td colspan="3">
-
-        </td>
-      </tr>
-
-    </table>
-  </body>
-=======
 <head>
+  <meta charset="UTF-8">
   <title>Foodhub</title>
 
-  <meta charset="utf-8">
-
-  <!-- Connect to Font Awesome CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-  <!-- Connect to our own additional CSS -->
-  <link rel="stylesheet" href="assets/additional_styles.css">
-
-  <!-- Connect to Google Web Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+  <style media="screen">
+  * {
+    border: thin red solid;
+  }
+  .main-content {
+    width: 100%;
+  }
+  </style>
 </head>
 
 <body>
   <table class="main-content">
+    <!-- Header -->
     <tr>
-      <td colspan="10" class="navbar">
-        <a class="navbar-brand" href="#">
-          FOODHUB
-        </a>
+      <td colspan="4">
+        <h1>FOODHUB</h1>
+
       </td>
-      <td class="navbar">
-        <a href="#">
-          Sign In
-        </a>
+      <td colspan="4">
+        <h1>Sign In</h1>
+
       </td>
-      <td class="navbar">
-        <a href="#" class="btn btn-link">
-          <i class="fa fa-shopping-bag fa-lg"></i>
-        </a>
+      <td colspan="4">
+        <h1>Shopping Cart</h1>
+
       </td>
     </tr>
 
+    <!-- Banner -->
     <tr>
-      <td colspan="12" class="who-delivers centered">
-        <h2>
-          Who delivers in your neighborhood?
-        </h2>
+      <td colspan="12">
+        <h1>Who delivers in your neighborhood?</h1>
 
-        <form>
-          <div class="form-group">
-            <label for="exampleInputAddress1">
-              Enter your address below.
-            </label>
+        <p>Enter your address below</p>
+        <!-- create textbox -->
+        <!-- create submit button -->
 
-            <div class="input-group">
-              <span class="input-group-addon" id="basic-addon1">
-                <i class="fa fa-map-marker"></i>
-              </span>
-
-              <input type="text" class="form-control" id="exampleInputAddress1" placeholder="Street address, city, state">
-            </div>
-          </div>
-
-          <button type="submit" class="primary-button">
-            Find Food
-          </button>
-        </form>
       </td>
     </tr>
 
+    <!-- How to foodhub -->
     <tr>
-      <td colspan="12" class="centered">
-        <h2>
-          How to Foodhub
-        </h2>
+      <td colspan="12">
+        <h1>How to foodhub</h1>
 
-        <p>
-          Ordering from your favorite restaurant is even easier than eating.
-        </p>
+        <h2>Ordering from your favorite restaurant is even easier than eating.</h2>
+
       </td>
     </tr>
 
+    <!-- Where what how -->
     <tr>
-      <td colspan="4" class="centered">
-        <img src="assets/images/map.jpg" class="round-image spotlight-image margin-below-bottom-sm">
+      <td colspan="4">
+        <h1>The where</h1>
 
-        <h4>
-          The where
-        </h4>
+        <h2>Browse menus from your facorite local restaurants</h2>
 
-        <p>
-          Browse menus from your favorite local restaurants.
-        </p>
       </td>
 
-      <td colspan="4" class="centered">
-        <img src="assets/images/menu.jpg" class="round-image spotlight-image margin-below-bottom-sm">
+      <td colspan="4">
+        <h1>The what</h1>
 
-        <h4>
-          The what
-        </h4>
+        <h2>Select what you want to eat. Submit your order</h2>
 
-        <p>
-          Select what you want to eat. Submit your order.
-        </p>
       </td>
 
-      <td colspan="4" class="centered">
-        <img src="assets/images/delivery.jpg" class="round-image spotlight-image margin-below-bottom-sm">
+      <td colspan="4">
+        <h1>The delivery</h1>
 
-        <h4>
-          The delivery
-        </h4>
+        <h2>Get the door and enjoy your food!</h2>
 
-        <p>
-          Get the door and enjoy your food!
-        </p>
       </td>
     </tr>
 
+    <!-- Sound bites banner-->
     <tr>
-      <td colspan="12" class="sound-bites centered">
-        <h2>
-          Sound bites
-        </h2>
+      <td colspan="12">
+        <h1>Sound bites</h1>
       </td>
     </tr>
 
+    <!-- Actual sound bites -->
     <tr>
-      <td colspan="3" class="sound-bites centered">
-        <img src="assets/images/user-1.jpg" class="round-image user-image">
+      <td colspan="3">
+        <img src="user-1.jpg" alt="" />
+
+        <p>@Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!</p>
 
         <p>
-          @Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!
+          <b>@xtinacousins</b>
         </p>
-
-        <h4>
-          @xtinacousins
-        </h4>
       </td>
 
-      <td colspan="3" class="sound-bites centered">
-        <img src="assets/images/user-2.jpg" class="round-image user-image">
+      <td colspan="3">
+        <img src="user-2.jpg" alt="" />
+
+        <p>Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.</p>
 
         <p>
-          Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.
+          <b>@udezekene</b>
         </p>
-
-        <h4>
-          @udezekene
-        </h4>
       </td>
 
-      <td colspan="3" class="sound-bites centered">
-        <img src="assets/images/user-3.jpg" class="round-image user-image">
+      <td colspan="3">
+        <img src="user-3.jpg" alt="" />
+
+        <p>Shout out to Foodhub for making my life so so easy.</p>
 
         <p>
-          Shout out to Foodhub for making my life so so easy.
+          <b>@adellecharles</b>
         </p>
-
-        <h4>
-          @adellecharles
-        </h4>
       </td>
 
-      <td colspan="3" class="sound-bites centered">
-        <img src="assets/images/user-4.jpg" class="round-image user-image">
+      <td colspan="3">
+        <img src="user-4.jpg" alt="" />
+
+        <p>Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!</p>
 
         <p>
-          Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!
+          <b>@vista</b>
         </p>
+      </td>
 
-        <h4>
-          @vista
-        </h4>
+    </tr>
+
+    <!-- Download apps -->
+    <tr>
+      <td colspan="12">
+        <h1>Download apps</h1>
+
+        <h2>Millions of users wand we want to befriend each one. 900+ cities and more than 35,000 restaurants.</h2>
+
+        <img src="app-store-badge.png" alt=""  height="60"/>
+        <img src="google-play-badge.png" alt="" height="60"/>
+
       </td>
     </tr>
 
+    <!-- Why foodhub -->
     <tr>
-      <td colspan="12" class="download-apps centered">
-        <h2>
-          Download apps
-        </h2>
+      <td colspan="12">
+        <h1>Why order with Foodhub?</h1>
 
-        <p class="tagline">
-          Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.
-        </p>
-
-        <img src="assets/images/app-store-badge.png" class="store-badge margin-below-bottom-xs">
-
-        <img src="assets/images/google-play-badge.png" class="store-badge margin-below-bottom-xs">
       </td>
     </tr>
 
+    <!-- Discover better food -->
     <tr>
-      <td colspan="12" class="why-order centered">
-        <h2>Why order with Foodhub?</h2>
+      <td colspan="4">
+        <img src="gem.jpg" alt="" height="200"/>
+
       </td>
+
+      <td colspan="4">
+        <img src="like.jpg" alt="" height="200"/>
+
+      </td>
+
+      <td colspan="4">
+        <img src="bite.jpg" alt="" height="200"/>
+
+      </td>
+
     </tr>
 
+    <!-- About foodhub -->
     <tr>
-      <td colspan="4" class="why-order centered">
-        <img src="assets/images/gem.jpg" class="round-image spotlight-image margin-below-bottom-sm">
-        <h4>Discover</h4>
-        <p>
-          We'll help you find hidden gems in your neighborhood.
-        </p>
-      </td>
+      <td colspan="6">
+        <h1>About Foodhub</h1>
 
-      <td colspan="4" class="why-order centered">
-        <img src="assets/images/like.jpg" class="round-image spotlight-image margin-below-bottom-sm">
-        <h4>Better</h4>
-        <p>
-          The more you use Foodhub, the better we are at making recommendations just for you.
-        </p>
-      </td>
-
-      <td colspan="4" class="why-order centered">
-        <img src="assets/images/bite.jpg" class="round-image spotlight-image margin-below-bottom-sm">
-        <h4>Food</h4>
-        <p>
-          Enjoy each bite all the more knowing your order supports local businesses.
-        </p>
-      </td>
-    </tr>
-
-    <tr>
-      <td colspan="6" class="centered">
-        <h2>About Foodhub</h2>
       </td>
 
       <td colspan="6">
-        <p>Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.</p>
+        <p>
+          Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.
+        </p>
+
       </td>
+
     </tr>
 
+    <!-- bottom nav -->
     <tr>
-      <td colspan="3" class="footer">
-        <h4 class="h4-footer">Sign up for special offers</h4>
-
-        <form>
-          <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-          </div>
-
-          <div class="form-group">
-            <input type="number" class="form-control" id="exampleInputZip1" placeholder="ZIP code">
-          </div>
-
-          <button type="submit" class="primary-button">Send me treats</button>
-        </form>
+      <td colspan="3">
+        <h2>Sign up for special offers</h2>
+        <!-- textbox for email -->
+        <!-- zip code -->
+        <!-- button : send me treats -->
       </td>
 
-      <td colspan="3" class="footer">
-        <h4 class="h4-footer">Get to know us</h4>
-
-        <ul class="list-unstyled">
-          <li class="li-footer">About Grubhub</li>
-          <li class="li-footer">Our apps</li>
-          <li class="li-footer">Our blog</li>
-          <li class="li-footer">Careers</li>
-          <li class="li-footer">Investor relations</li>
-          <li class="li-footer">News</li>
+      <td colspan="3">
+        <h2>Get to know us</h2>
+        <ul>
+          About FoodHub
         </ul>
+        <ul>
+          Our apps
+        </ul>
+        <ul>
+          Our blog
+        </ul>
+        <ul>
+          Careers
+        </ul>
+        <ul>
+          Investor relations
+        </ul>
+        <ul>
+          News
+        </ul>
+
       </td>
 
-      <td colspan="3" class="footer">
-
-        <h4 class="h4-footer">Help</h4>
-
-        <ul class="list-unstyled">
-          <li class="li-footer">FAQ</li>
-          <li class="li-footer">Contact us</li>
+      <td colspan="3">
+        <h2>Help</h2>
+        <ul>
+          FAQ
+        </ul>
+        <ul>
+          Contact us
         </ul>
 
-        <h4 class="h4-footer">Connect with us</h4>
-
-        <ul class="list-unstyled">
-          <li class="li-footer">Facebook</li>
-          <li class="li-footer">Twitter</li>
-          <li class="li-footer">Instagram</li>
-          <li class="li-footer">YouTube</li>
+        <h2>Connect with us</h2>
+        <ul>
+          Facebook
         </ul>
+        <ul>
+          Twitter
+        </ul>
+        <ul>
+          Instagram
+        </ul>
+        <ul>
+          Youtube
+        </ul>
+
       </td>
 
-      <td colspan="3" class="footer">
-
-        <h4 class="h4-footer">Partner with us</h4>
-
-        <ul class="list-unstyled">
-          <li class="li-footer">For restaurants</li>
-          <li class="li-footer">For drivers</li>
-          <li class="li-footer">For corporate accounts</li>
+      <td colspan="3">
+        <h2>Partner with us</h2>
+        <ul>
+          For restaurants
         </ul>
+        <ul>
+          For drivers
+        </ul>
+        <ul>
+          For corporate accounts
+        </ul>
+
       </td>
+
     </tr>
-
   </table>
-
 </body>
->>>>>>> dsgn425-2016/master
 </html>
-=======
-<h1>hello</h1>
->>>>>>> parent of c448000... Created structure and grids of landing page
-=======
-<h1>Good luck!</h1>
->>>>>>> dsgn425-2016/master
