--- a/public/landing.html
+++ b/public/landing.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Foodhub</title>
   <link rel="stylesheet" href="additional-styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Passion+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
@@ -12,14 +13,14 @@
     <!-- Header -->
     <tr>
       <td colspan="10" class="company-name">
-        <h1>FOODHUB</h1>
+        FOODHUB
 
       </td>
-      <td colspan="1" class="top-banner">
-        <h1>Sign In</h1>
+      <td class="top-banner">
+        Sign In
 
       </td>
-      <td colspan="1" class="top-banner">
+      <td class="top-banner">
         <i class="fa fa-shopping-bag"></i>
 
       </td>
@@ -52,7 +53,7 @@
     <!-- How to foodhub -->
     <tr>
       <td colspan="12" class="heading-row">
-        <h1>How to foodhub</h1>
+        <h1>How to Foodhub</h1>
 
         <h2>Ordering from your favorite restaurant is even easier than eating.</h2>
 
@@ -63,7 +64,7 @@
     <tr>
       <td colspan="4" class="how-to-cell">
         <img src="map.jpg" alt="" class="how-to-img"/>
-        <h3>The where</h3>
+        <h4>The where</h4>
 
         <p>Browse menus from your facorite local restaurant</p>
 
@@ -71,7 +72,7 @@
 
       <td colspan="4" class="how-to-cell">
         <img src="menu.jpg" alt="" class="how-to-img"/>
-        <h3>The what</h3>
+        <h4>The what</h4>
 
         <p>Select what you want to eat. Submit your order</p>
 
@@ -79,7 +80,7 @@
 
       <td colspan="4" class="how-to-cell">
         <img src="delivery.jpg" alt="" class="how-to-img"/>
-        <h3>The delivery</h3>
+        <h4>The delivery</h4>
 
         <p>Get the door and enjoy your food</p>
 
@@ -95,8 +96,8 @@
 
     <!-- Actual sound bites -->
     <tr>
-      <td colspan="3">
-        <img src="user-1.jpg" alt="" />
+      <td colspan="3" class="how-to-cell">
+        <img src="user-1.jpg" alt="" class="soundbites-img"/>
 
         <p>@Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!</p>
 
@@ -105,8 +106,8 @@
         </p>
       </td>
 
-      <td colspan="3">
-        <img src="user-2.jpg" alt="" />
+      <td colspan="3" class="how-to-cell">
+        <img src="user-2.jpg" alt="" class="soundbites-img"/>
 
         <p>Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.</p>
 
@@ -115,8 +116,8 @@
         </p>
       </td>
 
-      <td colspan="3">
-        <img src="user-3.jpg" alt="" />
+      <td colspan="3" class="how-to-cell">
+        <img src="user-3.jpg" alt="" class="soundbites-img"/>
 
         <p>Shout out to Foodhub for making my life so so easy.</p>
 
@@ -125,8 +126,8 @@
         </p>
       </td>
 
-      <td colspan="3">
-        <img src="user-4.jpg" alt="" />
+      <td colspan="3" class="how-to-cell">
+        <img src="user-4.jpg" alt="" class="soundbites-img"/>
 
         <p>Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!</p>
 
