--- a/public/landing.html
+++ b/public/landing.html
@@ -1,1 +1,215 @@
-<h1>Good luck!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Foodhub</title>
+<link rel="stylesheet" href="additional_style.css">
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link rel=stylesheet href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+<link href='https://fonts.googleapis.com/css?family=Passion+One:400,700,900' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+
+    <table class="main-content">
+
+      <tr>   <!--  Navigation-->
+        <td colspan="9" class="logo foodhub">
+          FOODHUB
+        </td>
+        <td colspan="1"class="foodhub">
+          Sign in
+        </td>
+        <td colspan="2"class="foodhub">
+<i class="fa fa-shopping-bag"></i>
+        </td>
+      </tr>
+      <tr>  <!--  Hero-->
+<td colspan="12" class="hero">
+<h1>Who delivers in your neighborhod?
+</h1>
+
+<form>
+  <div>
+    <label>Enter your address below
+    </label>
+  </div>
+  <div>
+    <i class="fa fa-map-marker"></i>
+  <input placeholder="Street address, city, state" type="text">
+</div>
+<div>
+  <button> Find Food</button>
+</div>
+</form>
+</td>
+      </tr>
+      <tr>  <!--  How-To Heading-->
+        <td colspan="12" class='heading-row'>
+        <h2>How to Foodhub</h2>
+        <p>Ordering from your favorite restaurant is even easier than eating</p>
+        </td>
+      </tr>
+      <tr>  <!--  How To content-->
+        <td colspan="4"class='how-to-cell'>
+          <img src="map.jpg" alt="" class='how-to-image'/>
+          <h3>
+            The where
+          </h3>
+          <p>
+            Browse menus from your favorite local restaurants.
+          </p>
+        </td>
+        <td colspan="4"class='how-to-cell'>
+          <img src="menu.jpg" alt="" class='how-to-image'/>
+          <h3>
+            The what
+          </h3>
+          <p>
+            Select what you want to eat. Submit your order.
+          </p>
+        </td>
+        <td colspan="4"class='how-to-cell'>
+          <img src="delivery.jpg" alt="" class='how-to-image'/>
+          <h3>
+            The delivery
+          </h3>
+          <p>
+            Get the door and enjoy your food!
+          </p>
+        </td>
+      </tr>
+      <tr>  <!--  Sound Bite Heading-->
+        <td colspan="12"class='how-to-cell'>
+          <h2>Sound bites</h2>
+        </td>
+
+      </tr>
+      <tr><!--  Sound Bite Content-->
+        <td colspan="3"class='sound-bite-cell'>
+          <img src="user-1.jpg" alt="" class='sound-bite-image'/>
+          <p>
+            @Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!
+          </p>
+          <h3>@xtinacousins</h3>
+        </td>
+        <td colspan="3"class='sound-bite-cell'>
+          <img src="user-2.jpg" alt="" class='sound-bite-image'/>
+          <p>
+            Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.
+          </p>
+          <h3>@udezekene</h3>
+
+        </td>
+        <td colspan="3"class='sound-bite-cell'>
+          <img src="user-3.jpg" alt="" class='sound-bite-image'/>
+          <p>
+            Shout out to Foodhub for making my life so so easy.
+          </p>
+          <h3>@adellecharles</h3>
+        </td>
+        <td colspan="3"class='sound-bite-cell'>
+          <img src="user-4.jpg" alt="" class='sound-bite-image'/>
+          <p>
+          Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!
+          </p>
+          <h3>@vista</h3>
+        </td>
+
+      </tr>
+        <tr><!--  Download Apps Heading-->
+          <td colspan="12" class=download-apps-image>
+         <h2>Download Apps</h2>
+       <p class="download-tag">Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.<p>
+           <img src="app-store-badge.png" alt="" class="app-store-image"/>
+           <img src="google-play-badge.png" alt="" class="app-store-image"/>
+         </td>
+      </tr>
+      <tr><!--  Why Order eading-->
+        <td colspan="12" class=heading-row>
+        <h2>Why order with Foodhub?</h2>
+        </td>
+      </tr>
+      <tr><!--  Why Order content-->
+        <td colspan="4" class='why-order-cell'>
+          <img src="gem.jpg" alt="" class='why-order-image'/>
+          <h3>Discover
+          </h3>
+          <p>
+            We'll help you find hidden gems in your neighborhood.
+          </p>
+        </td>
+        <td colspan="4" class='why-order-cell'>
+          <img src="like.jpg" alt="" class='why-order-image'/>
+          <h3>Better
+          </h3>
+          <p>
+            The more you use Foodhub, the better we are at making recommendations just for you.
+          </p>
+        </td>
+        <td colspan="4" class='why-order-cell'>
+          <img src="bite.jpg" alt="" class='why-order-image'/>
+          <h3>Food
+          </h3>
+          <p>
+            Enjoy each bite all the more knowing your order supports local businesses.
+          </p>
+        </td>
+      </tr>
+      <tr><!-- about -->
+        <td colspan="6" class="about-foodhub">
+          <h2>About Foodhub</h2>
+        </td>
+        <td  colspan="6">
+          <p>Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.</p>
+        </td>
+      </tr>
+      <tr><!-- footer -->
+        <td colspan="3" class="footer">
+          <h4>Sign up for special offers</h4>
+          <div>
+            <input placeholder="Email" type="text">
+          </div>
+          <div>
+            <input placeholder="ZIP code" type="text">
+          </div>
+          <div>
+            <button> Send me treats </button>
+          </div>
+        </td>
+        <td colspan="3" class="footer">
+          <h4>Get to know us</h4>
+          <ul>
+            <li>About Grubhub</li>
+            <li>Our apps</li>
+            <li>Our blog</li>
+          <li>Careers</li>
+          <li>Investor Relations</li>
+        <li>News</li>
+        </ul>
+      </td>
+      <td colspan="3" class="footer">
+        <h4>Help</h4>
+        <ul>
+          <li>FAQ</li>
+          <li>Contact Us</li>
+        </ul>
+        <h4>Connect with us</h4>
+        <ul>
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>Instagram</li>
+          <li>YouTube</li>
+        </ul>
+      </td>
+      <td colspan="3" class="footer">
+        <h4>Partner with us</h4>
+         <ul>
+           <li>For restaurants</li>
+          <li>For drivers</li>
+            <li>For corporate accounts</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </body>
+</html>
