--- a/public/landing.html
+++ b/public/landing.html
@@ -5,21 +5,26 @@
   <title>FoodHub</title>
   <link rel="stylesheet" href="additional_styles.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+
 </head>
 <body>
 
 
   <table class="main-content">
     <tr> <!--Navigation---->
-      <td colspan="6" class="navbar">
-        FOODHUB
+      <td colspan="10" class="navbar">
+        <a class="navbar-brand" href="https://wwww.google.com">FOODHUB</a>
       </td>
-      <td colspan="3" class="navbar">
-        Sign In
+      <td class="navbar">
+        <a class="navbar" href="https://www.google.com">
+        Sign In</a>
+
       </td>
-      <td colspan="3" class="navbar">
-        <i class="fa fa-shopping-bag"></i>
+      <td class="navbar">
+        <a href="https://www.google.com" class="btn btn-link">
+        <i class="fa fa-shopping-bag"></i></a>
       </td>
     </tr>
     <tr><!--Main---->
@@ -31,7 +36,9 @@
 
           <form><label>Enter your address below.</label>
           </form>
-          <i class="fa fa-map-marker"></i><input type=“text”>
+          <i class="fa fa-map-marker"></i>
+          <input type="text" placeholder="Street address, city, state">
+
         </div>
         <div><button>Find Food</button></div>
 
@@ -47,17 +54,17 @@
       </tr>
       <tr><!--3 options---->
         <td colspan="4" class="how-to-cell">
-          <img src="map.jpg" alt="" class="how-to-images">
+          <img src="map.jpg" alt="" class="round-image spotlight-image margin-below-bottom-sm">
           <h4>The where</h4>
           <p>Browse menus from your favorite local restaurants.</p>
         </td>
         <td colspan="4" class="how-to-cell">
-          <img src="menu.jpg" alt="" class="how-to-images">
+          <img src="menu.jpg" alt="" class="round-image spotlight-image margin-below-bottom-sm">
           <h4>The what</h4>
           <p>Select what you want to eat. Submit your order.</p>
         </td>
         <td colspan="4" class="how-to-cell">
-          <img src="delivery.jpg" alt="" class="how-to-images">
+          <img src="delivery.jpg" alt="" class="round-image spotlight-image margin-below-bottom-sm">
           <h4>The delivery</h4>
           <p>
             Get the door and enjoy your food!
@@ -125,7 +132,7 @@
       </tr>
       <tr><!--3 reasons---->
         <td colspan="4" class="why-cell">
-          <img src="gem.jpg" alt="" class="why-images">
+          <img src="gem.jpg" alt="" class="round-image spotlight-image margin-below-bottom-sm">
           <h4>Discover</h4>
           <p>
             We'll help you find hidden gems in your neighborhood.
@@ -133,14 +140,14 @@
 
         </td>
         <td colspan="4" class="why-cell">
-          <img src="like.jpg" alt="" class="why-images">
+          <img src="like.jpg" alt="" class="round-image spotlight-image margin-below-bottom-sm">
           <h4>Better</h4>
           <p>
             The more you use Foodhub, the better we are at making recommendations just for you.
           </p>
         </td>
         <td colspan="4" class="why-cell">
-          <img src="bite.jpg" alt="" class="why-images">
+          <img src="bite.jpg" alt="" class="round-image spotlight-image margin-below-bottom-sm">
           <h4>Food</h4>
           <p>
           Enjoy each bite all the more knowing your order supports local businesses.
@@ -148,7 +155,7 @@
         </td>
       </tr>
       <tr><!--about 2---->
-        <td colspan="6" class="why-cell">
+        <td colspan="6" class="centered">
           <h2>About Foodhub</h2>
         </td>
         <td colspan="6">
@@ -182,21 +189,23 @@
         </td>
         <td colspan="3" class="footer">
           <h4 class="h4-footer">Help</h4>
-
+<ul>
   <li class="li-footer">FAQ</li>
-  <li class="li-footer">Contact us</li>
+  <li class="li-footer">Contact us</li></ul>
 <h4 class="h4-footer">Connect with us</h4>
-
+<ul>
   <li class="li-footer">Facebook</li>
   <li class="li-footer">Twitter</li>
   <li class="li-footer">Instagram</li>
-  <li class="li-footer">YouTube</li>
+  <li class="li-footer">YouTube</li></ul>
+
         </td>
         <td colspan="3" class="footer">
           <h4 class="h4-footer">Partner with us</h4>
+          <ul>
 <li class="li-footer">For restaurants</li>
 <li class="li-footer">For drivers</li>
-<li class="li-footer">For corporate accounts</li>
+<li class="li-footer">For corporate accounts</li></ul>
         </td>
       </tr>
 
