--- a/public/landing.html
+++ b/public/landing.html
@@ -161,7 +161,7 @@
 
     <tr> <!--Footer-->
       <td colspan="3" class="footer">
-        Sign up for special offers
+        <h4>Sign up for special offers</h4>
         <form>
           <div class="form-group">
             <input type="email" placeholder="Email">
@@ -175,7 +175,7 @@
         </form>
       </td>
       <td colspan="3" class="footer">
-        Get to know us
+        <h4>Get to know us</h4>
         <ul>
           <li class="list-footer">About Grubhub</li>
           <li class="list-footer">Our apps</li>
@@ -186,12 +186,12 @@
         </ul>
       </td>
       <td colspan="3" class="footer">
-        Help
+        <h4>Help</h4>
         <ul>
           <li class="list-footer">FAQ</li>
           <li class="list-footer">Contact us</li>
         </ul>
-        Connect with us
+        <h4>Connect with us</h4>
         <ul>
           <li class="list-footer">Facebook</li>
           <li class="list-footer">Twitter</li>
@@ -200,7 +200,7 @@
         </ul>
       </td>
       <td colspan="3" class="footer">
-        Partner with us
+        <h4>Partner with us</h4>
         <ul>
           <li class="list-footer">For restaurants</li>
           <li class="list-footer">For drivers</li>
