created additional style sheet

--- a/public/landing.html
+++ b/public/landing.html
@@ -1,1 +1,129 @@
-<h1>Good luck!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>FoodHUB</title>
+  <link rel="stylesheet" href="addtional_styles.css" media="screen" title="no title" charset="utf-8">
+</head>
+<body>
+  <!-- This is test code to make sure this style sheet hooks correctly to landing.html -->
+  <!-- <h1>Howdy</h1> -->
+  <table>
+
+    <!-- Navigaton -->
+    <tr class="main-content">
+      <td colspan="6">
+        1.1-->
+      </td>
+
+      <td colspan="3">
+        1.7-->
+      </td>
+      <td colspan="3">
+        1.10-->
+      </td>
+    </tr>
+
+    <!-- Hero -->
+    <tr>
+      <td colspan="12">
+        2.1
+      </td>
+    </tr>
+
+    <!-- How-To Heading -->
+    <tr>
+      <td colspan="12">
+        3.1
+      </td>
+    </tr>
+
+    <!-- How-To Content -->
+    <tr>
+      <td colspan="4">
+        4
+      </td><td colspan="4">
+        4
+      </td><td colspan="4">
+        4
+      </td>
+    </tr>
+
+    <!-- Sound bites Heading -->
+    <tr>
+      <td colspan="12">
+        5.1-->
+      </td>
+    </tr>
+
+    <!-- Sound bites Content -->
+    <tr>
+      <td colspan="3">
+        6
+      </td>
+      <td colspan="3">
+        6
+      </td>
+      <td colspan="3">
+        6
+      </td>
+      <td colspan="3">
+        6
+      </td>
+    </tr>
+
+    <!-- Download Apps -->
+    <tr>
+      <td colspan="12">
+        7.1
+      </td>
+    </tr>
+
+    <!-- Why Order Heading -->
+    <tr>
+      <td colspan="12">
+        8.1
+      </td>
+    </tr>
+
+    <!-- Why Order Content -->
+    <tr>
+      <td colspan="4">
+        9.1
+      </td>
+      <td colspan="4">
+        9.5
+      </td>
+      <td colspan="4">
+        9.9
+      </td>
+    </tr>
+
+    <!-- About -->
+    <tr>
+      <td colspan="5">
+        10.1
+      </td>
+      <td colspan="5">
+        10.6
+      </td>
+    </tr>
+
+    <!-- Footer -->
+    <tr>
+      <td colspan="3">
+        11
+      </td>
+      <td colspan="3">
+      11
+      </td>
+      <td colspan="3">
+      11
+      </td>
+      <td colspan="3">
+        11
+      </td>
+    </tr>
+
+  </table>  </body>
+  </html>
