--- a/public/landing.html
+++ b/public/landing.html
@@ -29,7 +29,9 @@
     </tr>
 
     <tr> <!--Hero -->
-      <td colspan="12" class="hero">
+      <td colspan="12">
+<img src="assets/images/hero.png">
+      class="hero">
         <h2>Who delivers in your neighborhood?</h2>
 
         <form>
@@ -163,8 +165,8 @@
 
     <p> Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.</p>
 
-    <img src="app-store-badge.png" class="badge">
-    <img src="google-play-badge.png" class="badge">
+    <img src="assets/images/app-store-badge.png" class="badge">
+    <img src="assets/image/google-play-badge.png" class="badge">
   </td>
 
 
