--- a/public/landing.html
+++ b/public/landing.html
@@ -13,12 +13,15 @@
   <table class="main-content">
 
     <tr><!--Navigation -->
+      <td colspan="6" class="navbar foodhub-font padding">
         FOODHUB
       </td>
 
+      <td colspan="3"class="navbar padding">
         Sign In
       </td>
 
+      <td colspan="3"class="navbar padding">
         <i class="fa fa-shopping-bag"></i>
       </td>
 
@@ -56,6 +59,7 @@
     </tr>
 
     <tr> <!--How-To Content -->
+      <td colspan="4" class="how-to-cell vertical-align">
         <img src="map.jpg" alt="" class="how-to-image"/>
         <h4>The where</h4>
         <p>
@@ -63,6 +67,7 @@
         </p>
       </td>
 
+      <td colspan="4" class="how-to-cell vertical-align">
         <img src="menu.jpg" alt="" class="how-to-image" />
         <h4>The what</h4>
         <p>
@@ -70,6 +75,7 @@
         </p>
       </td>
 
+      <td colspan="4" class="how-to-cell vertical-align">
         <img src="delivery.jpg" alt="" class="how-to-image" />
         <h4>The delivery</h4>
         <p>
@@ -85,6 +91,7 @@
     </tr>
 
     <tr> <!--Sound Bites Content -->
+      <td colspan="3" class="how-to-cell vertical-align">
         <img src="user-1.jpg" alt=""class="how-to-image-user" />
 
         <p>
@@ -94,6 +101,7 @@
         <h4>@xtinacousins</h4>
       </td>
 
+      <td colspan="3" class="how-to-cell vertical-align">
         <img src="user-2.jpg" alt="" class="how-to-image-user" />
 
         <p>
@@ -103,6 +111,7 @@
         <h4>@udezekene</h4>
       </td>
 
+      <td colspan="3" class="how-to-cell vertical-align">
         <img src="user-3.jpg" alt="" class="how-to-image-user" />
 
         <p>
@@ -112,6 +121,7 @@
         <h4>@adellecharles</h4>
       </td>
 
+      <td colspan="3" class="how-to-cell vertical-align">
         <img src="user-4.jpg" alt="" class="how-to-image-user" />
 
         <p>
@@ -123,6 +133,7 @@
     </tr>
 
     <tr><!--Download Apps -->
+      <td colspan="12" class="download-apps vertical-align">
         <h2>Download apps</h2>
         <p>
           Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.
@@ -133,11 +144,13 @@
     </tr>
 
     <tr><!--Why order heading -->
+      <td colspan="12"class="how-to-cell vertical-align">
         <h2>Why order with Foodhub?</h2>
       </td>
     </tr>
 
     <tr><!--Why order content -->
+      <td colspan="4"class="how-to-cell vertical-align">
         <img src="gem.jpg" alt=""class="how-to-image" />
         <h4>Discover</h4>
         <p>
@@ -145,6 +158,7 @@
         </p>
       </td>
 
+      <td colspan="4"class="how-to-cell vertical-align">
         <img src="like.jpg" alt=""class="how-to-image" />
         <h4>Better</h4>
         <p>
@@ -152,6 +166,7 @@
         </p>
       </td>
 
+      <td colspan="4"class="how-to-cell vertical-align">
         <img src="bite.jpg" alt=""class="how-to-image" />
         <h4>Food</h4>
         <p>
