--- a/public/henry-m-landing.html
+++ b/public/henry-m-landing.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
   <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
 </head>
+
+
+
 <body>
   <!-- This is test code to make sure this style sheet hooks correctly to landing.html -->
   <!-- <h1>Howdy</h1> -->
@@ -15,36 +18,42 @@
 
     <!--R1 Navigaton -->
     <tr class="main-content mk-text-white" >
-      <td colspan="6" class="navbar-bkgrd-color">
+      <td colspan="10" class="navbar-bkgrd-color">
         <a class="navbar-brand" href="https://www.google.com">
           FOODHUB
         </a>
       </td>
-      <td colspan="3" class="navbar-bkgrd-color">
+      <td colspan="1" class="navbar-bkgrd-color">
         <a href="https://www.google.com">
-        Sign In
-      </a>
+          Sign In
+        </a>
       </td>
-      <td colspan="3" class="navbar-bkgrd-color">
+      <td colspan="1" class="navbar-bkgrd-color">
         <a href="https://www.google.com">
-        <i class="fa fa-shopping-bag fa-lg" aria-hidden="true"></i>
-      </a>
+          <i class="fa fa-shopping-bag fa-lg" aria-hidden="true"></i>
+        </a>
       </td>
     </tr>
+
+
 
     <!-- R2 Hero -->
     <tr>
       <td colspan="12" class="hero1">
-        <h1>Who delivers in your neighborhood?</h1>
+        <h2>Who delivers in your neighborhood?</h2>
         <form>
-          <div>
-            <label>Enter your address below. </label>
+          <div class="form-group">
+            <label>
+              Enter your address below.
+            </label>
+            <div class="input-group">
+              <i class="fa fa-map-marker"></i>
+              <input type="text" placeholder="Street address, city, state">
+            </div>
           </div>
-          <div>
-            <i class="fa fa-map-marker" aria-hidden="true"></i>
-            <input type="button" name="name" value="Street addess, city, state">
-          </div>
-          <button type="Find Food" name="button"> Find Food </button>
+          <button type="submit" class="primary-button">
+            Find Food
+          </button>
         </form>
       </td>
     </tr>
@@ -60,19 +69,66 @@
     <!-- R4 Three circular pictures -->
     <tr class="centre-text">
       <td colspan="4" class="how-to-cell">
-        <img src="map.jpg" alt="" class="how-to-image"/>
+        <img src="map.jpg" alt="" class="how-to-image margin-below-bottom-md"/>
         <h4>The where</h4>
         <p> Browse menus from your favorite local restaurants. </p>
       </td><td colspan="4" class="how-to-cell">
-        <img src="menu.jpg" alt="" class="how-to-image"/>
+        <img src="menu.jpg" alt="" class="how-to-image margin-below-bottom-md"/>
         <h4>  The what </h4>
         <p> Select what you want to eat. Submit your order. </p>
       </td><td colspan="4" class="how-to-cell">
-        <img src="delivery.jpg" alt="" class="how-to-image"/>
+        <img src="delivery.jpg" alt="" class="how-to-image margin-below-bottom-md"/>
         <h4>The delivery </h4>
         <p> Get the door and enjoy your food! </p>
       </td>
     </tr>
+
+
+    <!-- <tr>
+      <td colspan="4" class="centered">
+        <img src="assets/images/map.jpg" class="round-image spotlight-image margin-below-bottom-sm">
+
+        <h4>
+          The where
+        </h4>
+
+        <p>
+          Browse menus from your favorite local restaurants.
+        </p>
+      </td>
+
+      <td colspan="4" class="centered">
+        <img src="assets/images/menu.jpg" class="round-image spotlight-image margin-below-bottom-sm">
+
+        <h4>
+          The what
+        </h4>
+
+        <p>
+          Select what you want to eat. Submit your order.
+        </p>
+      </td>
+
+      <td colspan="4" class="centered">
+        <img src="assets/images/delivery.jpg" class="round-image spotlight-image margin-below-bottom-sm">
+
+        <h4>
+          The delivery
+        </h4>
+
+        <p>
+          Get the door and enjoy your food!
+        </p>
+      </td>
+    </tr> -->
+
+
+
+
+
+
+
+
 
     <!-- R5 Sound bites Heading -->
     <tr class="centre-text, grey-bkgrd-color">
@@ -84,19 +140,22 @@
     <!-- R6 Comments from people -->
     <tr class="centre-text, grey-bkgrd-color">
       <td colspan="3">
-        <!-- <img src="assets/images/user-1.jpg" class="round-image user-image"> -->
+        <img src="user-1.jpg" class="round-image user-image">
         <p> @Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks! </p>
         <h4> @xtinacousins </h4>
       </td>
       <td colspan="3">
+        <img src="user-2.jpg" class="round-image user-image">
         <p> Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone. </p>
         <h4> @udezekene </h4>
       </td>
       <td colspan="3">
+        <img src="user-3.jpg" class="round-image user-image">
         <p> Shout out to Foodhub for making my life so so easy. </p>
         <h4> @adellecharles </h4>
       </td>
       <td colspan="3">
+        <img src="user-4.jpg" class="round-image user-image">
         <p> Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD! </p>
         <h4>@vista</h4>
       </td>
@@ -105,12 +164,11 @@
     <!-- R7 Download Apps -->
     <tr>
       <td colspan="12" class="download-apps">
-        <h1>Download apps</h1>
+        <h2>Download apps</h2>
         <p>
           Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.
         </p>
         <img src="app-store-badge.png" width ="200">
-        <img src="google-play-badge.png" width ="200">
       </td>
     </tr>
 
